# amazon-to-ynab

./: .gitignore  LICENSE  README.md  amazon.py  config.toml.example  pyproject.toml  requirements.txt  ynab.py
tests/: test_amazon.py
