[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Joel Heaps"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "bs4<1.0.0,>=0.0.1",
    "toml<1.0.0,>=0.10.2",
]
name = "amazon-to-ynab"
version = "0.1.0"
description = "A tool to add Amazon purchase descriptions to YNAB transactions"
readme = "README.md"

[project.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
ruff = "^0.0.275"
